--- a/MatchMaking/appsettings.json
+++ b/MatchMaking/appsettings.json
@@ -1,7 +1,13 @@
 {
   "Redis": {
     "Host": "localhost",
-    "Port": 6379
+    "Port": 6379,
+    "RedisKeys": {
+      "PlayersQueueKey": "matchmaking:queue",
+      "TasksQueueKey": "matchmaking:tasks",
+      "PlayersKey": "player",
+      "MatchesKey": "match"
+    }
   },
   "Logging": {
     "LogLevel": {
