Add worker to process searches

--- a/MatchMaking/appsettings.json
+++ b/MatchMaking/appsettings.json
@@ -2,6 +2,7 @@
   "Redis": {
     "Host": "localhost",
     "Port": 6379,
+    "ProcessBatchSize": 150,
     "RedisKeys": {
       "PlayersQueueKey": "matchmaking:queue",
       "TasksQueueKey": "matchmaking:tasks",
