--- a/MatchMaking/appsettings.json
+++ b/MatchMaking/appsettings.json
@@ -2,13 +2,23 @@
   "Redis": {
     "Host": "localhost",
     "Port": 6379,
-    "ProcessBatchSize": 150,
+    "MatchTTL": 3600,
+    "LobbyTTL": 10,
     "RedisKeys": {
-      "PlayersQueueKey": "matchmaking:queue",
-      "TasksQueueKey": "matchmaking:tasks",
+      "LobbyKey": "matchmaking:lobby",
+      "QueueKey": "matchmaking:find-queue",
       "PlayersKey": "player",
       "MatchesKey": "match"
     }
+  },
+  "Matchmaking": {
+    "ProcessBatchSize": 150,
+    "MaxQueueWaitSeconds": 10,
+    "SkillRangeExpansionIntervalSeconds": 2,
+    "InitialRatingRangeExpand": 0.05,
+    "MaxInitialRatingRangeExpand": 50,
+    "RatingRangeExpand": 0.025,
+    "MaxRatingRangeExpand": 25
   },
   "Logging": {
     "LogLevel": {
