Add PlayerToMatch collection

--- a/MatchMaking/appsettings.json
+++ b/MatchMaking/appsettings.json
@@ -8,11 +8,12 @@
       "LobbyKey": "matchmaking:lobby",
       "QueueKey": "matchmaking:find-queue",
       "PlayersKey": "player",
-      "MatchesKey": "match"
+      "MatchesKey": "match",
+      "PlayerMatchKey": "PlayerToMatch"
     }
   },
   "Matchmaking": {
-    "ProcessBatchSize": 150,
+    "ProcessBatchSize": 300,
     "MaxQueueWaitSeconds": 10,
     "SkillRangeExpansionIntervalSeconds": 2,
     "InitialRatingRangeExpand": 0.05,
